--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2554,3 +2554,32 @@ footer .credits {
     padding-bottom: 6%;
   }
 }
+
+
+/*------------------Whatsapp Icon -----------------*/
+#whatsapp-icon { 
+  position: fixed;
+  display: block;
+  right: 25px;
+  top: 85px;
+  z-index: 99999;
+}
+
+#whatsapp-icon i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  width: 48px;
+  height: 48px;
+  border-radius: 50px;
+  background: #4FCE5D;
+  color: #fff;
+  transition: all 0.4s;
+  font-weight: 900;
+}
+
+#whatsapp-icon i:hover {
+  background: #127bc0;
+  color: #fff;
+}
